# ComputerGraphics

./: Algebra.cpp  CMakeLists.txt  LICENSE  README.md  funcoes_auxiliares.cpp  funcoes_auxiliares.h  funcoes_auxiliares_de_modelacao.cpp  funcoes_auxiliares_de_modelacao.h  tarefa1.cpp  tarefa2.cpp  tarefa3.cpp  tarefa4.cpp  tarefa5.cpp
src/: calcular_intersecao.cpp  calcular_intersecao.h  inicializar_objetos.cpp  inicializar_objetos.h  objetosTrabalhofinal.cpp  objetosTrabalhofinal.h
src/Aresta/: Aresta.cpp  Aresta.h
src/BoundingBoxes/: BoundigBoxes.cpp  BoundigBoxes.h
src/Camera/: Camera.cpp  Camera.h  Camera3de.h
src/Cilindro/: Cilindro.cpp  Cilindro.h
src/Circulo/: Circulo.cpp  Circulo.h
src/Cone/: Cone.cpp  Cone.h
src/Esfera/: Esfera.cpp  Esfera.h
src/Iluminacao/: Iluminacao.cpp  Iluminacao.h
src/Malha/: Malha.cpp  Malha.h
src/Material/: Material.cpp  Material.h
src/Objeto/: Objeto.cpp  Objeto.h
src/ObjetoComplexo/: ObjetoComplexo.cpp  ObjetoComplexo.h
src/Plano/: Plano.cpp  Plano.h
src/PlanoTextura/: PlanoTextura.cpp  PlanoTextura.h
src/Ponto/: Ponto.cpp  Ponto.h
src/Raio/: Raio.cpp  Raio.h
src/Textura/: Textura.cpp  Textura.h
src/Triangulo/: Triangulo.cpp  Triangulo.h
src/rayTracer/: RayTracer.cpp  RayTracer.h
